[package]
name = "coxfitter"
version = "0.1.0"
edition = "2021"

[lib]
doctest = false

[dependencies]
polars = { git = "https://github.com/hiroki-chen/polars.git", default-features = false, features = [
  "lazy",
  "ndarray",
  "parquet",
] }
anyhow = "1.0.98"
# Lock to "0.15.6" since polars are using this to avoid breaking changes.
ndarray = { version = "0.15.6", features = ["approx"] }
ndarray-linalg = { version = "0.15" }
ndarray_einsum_beta = "0.7.0"
# The version on crates.io is problematic; we lock to a specific commit.
# argmin = { git = "https://github.com/argmin-rs/argmin.git", rev = "d4f20b7" }
# argmin-math = { git = "https://github.com/argmin-rs/argmin.git", features = [
#   "ndarray_latest",
# ], rev = "d4f20b7" }

# O3 for debugging
[profile.dev]
opt-level = 3
